csye6225-infra.yml
Description: The template deploys VPC, with 3 public subnets spreading 
  across 3 Availability Zones. It deploys an internet gateway, with a default
  route on the public subnets. 

Parameters:
  EnvironmentName:
    Description: An environment name that is prefixed to resource names
    Type: String
    Default: prod_env
  VpcCIDR:
    Description: IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.0.0.0/16
  DestinationRouteCIDR:
    Description: Destination CIDR for Route
    Type: String
    Default: 0.0.0.0/0
  ImageAMIId:
    Description: AMI Id
    Type: String
    Default: ""
  SSHKey:
    Description: SSH Key
    Type: String
    Default: "csye6225test"
  VolumeSizeValue:
    Description: Size
    Type: String
    Default: ""
  DBInstanceIden:
    Description: My database instance
    Type: String
    Default: "csye6225"
  DBName:
    Default: csye6225
    Description: My database
    Type: String
  DBUsername:
    NoEcho: "true"
    Description: Username for postgresql database access
    Type: String
  DBPassword:
    NoEcho: "true"
    Description: Password for postgresql database access
    Type: String
  RootDomainName:
    Description: Domain Name of prod account
    Type: String
    Default: prod.nehabattula.me
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Select [0, !Cidr [!GetAtt VPC.CidrBlock, 6, 8]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Select [1, !Cidr [!GetAtt VPC.CidrBlock, 6, 8]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet2

  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [2, !GetAZs '']
      CidrBlock: !Select [2, !Cidr [!GetAtt VPC.CidrBlock, 6, 8]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet3

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Public Route Table

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: !Ref DestinationRouteCIDR
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet3

  application:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "App security group description"
      GroupName: "Application group Name"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
        - IpProtocol: tcp
          FromPort: 3002
          ToPort: 3002
          SourceSecurityGroupId: !GetAtt loadbalancerSecurityGroup.GroupId

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Select [3, !Cidr [!GetAtt VPC.CidrBlock, 6, 8]]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Select [4, !Cidr [!GetAtt VPC.CidrBlock, 6, 8]]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet2

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [2, !GetAZs '']
      CidrBlock: !Select [5, !Cidr [!GetAtt VPC.CidrBlock, 6, 8]]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet3

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Routes

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet2

  PrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet3

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: subnetgroupdescription
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
        - !Ref PrivateSubnet3

  database:
    DependsOn:
      - PrivateSubnet1
      - PrivateSubnet2
      - PrivateSubnet3
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: DBSecurityGroup
      GroupDescription: "Postgres DB Security Group"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        IpProtocol: tcp
        FromPort: 5432
        ToPort: 5432
        SourceSecurityGroupId: !GetAtt application.GroupId

  S3Bucket:
    Type: AWS::S3::Bucket
    Description: S3 bucket creation
    Properties:
      BucketName: !Join
        - "-"
        - - !Select
            - 0
            - !Split
              - "-"
              - !Select
                - 2
                - !Split
                  - "/"
                  - !Ref "AWS::StackId"
          - !Ref RootDomainName

      AccessControl: Private
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      LifecycleConfiguration:
        Rules:
          - Id: Rule for transition from Standard storage to Standard_IA
            Transitions:
              - TransitionInDays: 30
                StorageClass: STANDARD_IA
            Status: Enabled
      VersioningConfiguration:
        Status: Enabled

  RDSParameterGroup:
    Type: AWS::RDS::DBParameterGroup
    Properties:
      Description: CloudFormation Postgres Parameter Group
      Family: postgres13

  DBinstance:
    Type: AWS::RDS::DBInstance
    Properties:
      VPCSecurityGroups: [!Ref database]
      AllocatedStorage: "30"
      DBInstanceIdentifier: !Ref DBInstanceIden
      Engine: postgres
      DBInstanceClass: "db.t3.micro"
      MultiAZ: false
      MasterUsername: csye
      MasterUserPassword: Nevika.1996
      DBSubnetGroupName: !Ref DBSubnetGroup
      PubliclyAccessible: false
      DBName: csye6225
      DBParameterGroupName: !Ref RDSParameterGroup

  EC2CSYE6225:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Path: "/"

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - Ref: "EC2CSYE6225"

  WebAppS3:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: "myWebApplicationS3"
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Action:
              - s3:PutObject
              - s3:GetObject
              - s3:DeleteObject
            Resource:
              - !Join [":::", ["arn:aws:s3", !Ref S3Bucket]]
              - !Join ["/", [!Join [":::", ["arn:aws:s3", !Ref S3Bucket]], "*"]]
      Roles:
        - Ref: "EC2CSYE6225"

  loadbalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: LBSecurityGroup1
      GroupDescription: "Load Balancer Security Group"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: "0.0.0.0/0"

  autoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      TargetGroupARNs:
        - !Ref EC2TargetGroupLB
      VPCZoneIdentifier:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
        - !Ref PublicSubnet3
      Cooldown: "60"
      MinSize: "3"
      MaxSize: "5"
      DesiredCapacity: "3"
      LaunchConfigurationName: !Ref asglaunchconfig
      Tags:
        - Key: "Name"
          PropagateAtLaunch: true
          Value: "EC2AutoScalingGroup"

  asglaunchconfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      AssociatePublicIpAddress: true
      IamInstanceProfile: !Ref EC2InstanceProfile
      ImageId: !Ref ImageAMIId
      InstanceType: t2.micro
      KeyName: !Ref SSHKey
      BlockDeviceMappings:
        - DeviceName: "/dev/sdm"
          Ebs:
            VolumeType: "gp2"
            DeleteOnTermination: "true"
            VolumeSize: "20"
      LaunchConfigurationName: AutoScalingLaunchConfig
      SecurityGroups:
        - !GetAtt "application.GroupId"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          cat > /etc/environment << 'EOF'
            export DB_USERNAME="csye"
            export DB_PASSWORD="Nevika.1996"
            export DB_NAME="csye6225"
            export DB_CONNECTION=${DBinstance.Endpoint.Address}
            export S3_BUCKET_NAME="${S3Bucket}
          EOF
          source /etc/profile
          cd /home/ec2-user/webservice
          rm -rf node_modules
          sudo npm i
          sudo systemctl enable myapp
          sudo systemctl start myapp
          sleep 20
          sudo pm2 reload all --update-env
          sudo service codedeploy-agent start

  UpScalingPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref autoScalingGroup
      ScalingAdjustment: 1

  DownScalingPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref autoScalingGroup
      ScalingAdjustment: -1

  CPUUsageHigh:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: Trigger CPU alarm if threshold > 3
      AlarmName: CPU Alarm High
      Namespace: AWS/EC2
      AlarmActions:
        - !Ref UpScalingPolicy
      MetricName: CPUUtilization
      Statistic: Average
      Period: "300"
      EvaluationPeriods: "1"
      Threshold: "3"
      ComparisonOperator: GreaterThanThreshold
      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref autoScalingGroup

  CPUUsageLow:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: Trigger CPU alarm if threshold is < 2
      AlarmName: CPU Alarm Low
      Namespace: AWS/EC2
      AlarmActions:
        - !Ref DownScalingPolicy
      MetricName: CPUUtilization
      Statistic: Average
      Period: "300"
      EvaluationPeriods: "1"
      Threshold: "2"
      ComparisonOperator: LessThanThreshold
      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref autoScalingGroup

  EC2LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    DependsOn: InternetGatewayAttachment
    Properties:
      IpAddressType: ipv4
      Name: ApplicationLoadBalancer
      Scheme: internet-facing
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
        - !Ref PublicSubnet3
      SecurityGroups:
        - !GetAtt loadbalancerSecurityGroup.GroupId
      Type: application

  EC2TargetGroupLB:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /healthz
      HealthCheckPort: 3002
      HealthCheckProtocol: HTTP
      HealthyThresholdCount: 5
      UnhealthyThresholdCount: 2
      Name: EC2AppTargetGroup
      Port: 3002
      Protocol: HTTP
      VpcId: !Ref VPC
      TargetType: instance

  EC2LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref EC2LoadBalancer
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref EC2TargetGroupLB
      Port: 80
      Protocol: HTTP

  applicationDNS:
    Type: AWS::Route53::RecordSetGroup
    Properties:
      HostedZoneName: prod.nehabattula.me.
      RecordSets:
        - Name: prod.nehabattula.me.
          Type: A
          AliasTarget:
            HostedZoneId: !GetAtt "EC2LoadBalancer.CanonicalHostedZoneID"
            DNSName: !GetAtt "EC2LoadBalancer.DNSName"
  CodeDeployEC2S3:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: AccessToEC2ForReadingS3
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - 's3:GetObject'
              - 's3:List*'
            Resource:
              - !Join [":::",["arn:aws:s3", "mycodedeploybucket96"]]
              - !Join [
                  "/",
                  [
                    !Join [":::", ["arn:aws:s3","mycodedeploybucket96"]],
                    "*",
                  ],
                ]
      Roles:
        - !Ref EC2CSYE6225

  GHUploadToS3:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: AccessToGHAToUploadToS3
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - 's3:Get*'
              - 's3:List*'
              - 's3:PutObject'
            Resource:
              - "arn:aws:s3:::mycodedeploybucket96"
              - "arn:aws:s3:::mycodedeploybucket96/*"
      Users:
        - ghactions

  ghec2ami:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: gh-ec2-ami
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - 'ec2:AttachVolume'
              - 'ec2:AuthorizeSecurityGroupIngress'
              - 'ec2:CopyImage'
              - 'ec2:CreateImage'
              - 'ec2:CreateKeypair'
              - 'ec2:CreateSecurityGroup'
              - 'ec2:CreateSnapshot'
              - 'ec2:CreateTags'
              - 'ec2:CreateVolume'
              - 'ec2:DeleteKeyPair'
              - 'ec2:DeleteSecurityGroup'
              - 'ec2:DeleteSnapshot'
              - 'ec2:DeleteVolume'
              - 'ec2:DeregisterImage'
              - 'ec2:DescribeImageAttribute'
              - 'ec2:DescribeImages'
              - 'ec2:DescribeInstances'
              - 'ec2:DescribeInstanceStatus'
              - 'ec2:DescribeRegions'
              - 'ec2:DescribeSecurityGroups'
              - 'ec2:DescribeSnapshots'
              - 'ec2:DescribeSubnets'
              - 'ec2:DescribeTags'
              - 'ec2:DescribeVolumes'
              - 'ec2:DetachVolume'
              - 'ec2:GetPasswordData'
              - 'ec2:ModifyImageAttribute'
              - 'ec2:ModifyInstanceAttribute'
              - 'ec2:ModifySnapshotAttribute'
              - 'ec2:RegisterImage'
              - 'ec2:RunInstances'
              - 'ec2:StopInstances'
              - 'ec2:TerminateInstances'
            Resource: "*"
      Users:
        - ghactions
  GHCodeDeploy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: "GHCodeDeploy"
      PolicyDocument:
        Version: "2012-10-17"
        Statement: [
            {
              "Effect": "Allow",
              "Action":
                [
                  "codedeploy:RegisterApplicationRevision",
                  "codedeploy:GetApplicationRevision",
                ],
              "Resource":
                [
                  !Join [
                    "",
                    [
                      "arn:aws:codedeploy:us-east-1:",
                      !Ref "AWS::AccountId",
                      ":application:csye6225webapp",
                    ],
                  ],
                ],
            },
            # "arn:aws:codedeploy:us-east-1:751494202577:application:csye6225webapp",
            {
              "Effect": "Allow",
              "Action":
                ["codedeploy:CreateDeployment", "codedeploy:GetDeployment"],
              "Resource": ["*"],
            },
            {
              "Effect": "Allow",
              "Action": ["codedeploy:GetDeploymentConfig"],
              "Resource":
                [
                  !Join [
                    "",
                    [
                      "arn:aws:codedeploy:us-east-1:",
                      !Ref "AWS::AccountId",
                      ":deploymentconfig:CodeDeployDefault.OneAtATime",
                    ],
                  ],
                  !Join [
                    "",
                    [
                      "arn:aws:codedeploy:us-east-1:",
                      !Ref "AWS::AccountId",
                      ":deploymentconfig:CodeDeployDefault.HalfAtATime",
                    ],
                  ],
                  !Join [
                    "",
                    [
                      "arn:aws:codedeploy:us-east-1:",
                      !Ref "AWS::AccountId",
                      ":deploymentconfig:CodeDeployDefault.AllAtOnce",
                    ],
                  ],
                ],
            },
          ]
      # "arn:aws:codedeploy:us-east-1:751494202577:deploymentconfig:CodeDeployDefault.OneAtATime",
      # "arn:aws:codedeploy:us-east-1:751494202577:deploymentconfig:CodeDeployDefault.HalfAtATime",
      # "arn:aws:codedeploy:us-east-1:751494202577:deploymentconfig:CodeDeployDefault.AllAtOnce",
      Users:
        - "ghactions"
  
  CodeDeployServiceRole:
    Type: AWS::IAM::Role
    Properties:
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/service-role/AWSCodeDeployRole"
      Description: Allows Code deploy to call AWS services such as Auto Scaling on your behalf
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: 
              Service:
                - codedeploy.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: "/"

  csye6225webapp:
    Type: AWS::CodeDeploy::Application
    Properties:
      ComputePlatform: Server
      ApplicationName: csye6225webapp

  csye6225webappdeployment:
    DependsOn: csye6225webapp
    Type: AWS::CodeDeploy::DeploymentGroup
    Properties:
      ApplicationName: !Ref csye6225webapp
      AutoScalingGroups:
      - Ref: autoScalingGroup
      DeploymentGroupName: "csye6225webappdeployment"
      ServiceRoleArn: !GetAtt CodeDeployServiceRole.Arn
      DeploymentStyle:
        DeploymentType: "IN_PLACE"
        DeploymentOption: "WITHOUT_TRAFFIC_CONTROL"
      DeploymentConfigName: CodeDeployDefault.AllAtOnce
      AutoRollbackConfiguration:
        Enabled: "true"
        Events:
          - DEPLOYMENT_FAILURE
      # Ec2TagFilters:
      #   - Key: Name
      #     Value: EC2AutoScalingGroup
      #     Type: KEY_AND_VALUE
     
  cloudwatchagentpolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: "EC2CloudWatchPolicy"
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - 'cloudwatch:PutMetricData'
              - 'ec2:DescribeTags'
              - 'logs:PutLogEvents'
              - 'logs:DescribeLogStreams'
              - 'logs:DescribeLogGroups'
              - 'logs:CreateLogStream'
              - 'logs:CreateLogGroup'
              - 'logs:DescribeVolumes'
            Resource: "*"
          - Effect: Allow
            Action:
              - 'ssm:GetParameter'
              - 'ssm:PutParameter'
            Resource: "arn:aws:ssm:*:*:parameter/AmazonCloudWatch-*"
      Roles:
        - Ref: EC2CSYE6225
  LambdaRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "lambda.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/AmazonSESFullAccess"
        - "arn:aws:iam::aws:policy/service-role/AWSLambdaRole"
        - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
        - "arn:aws:iam::aws:policy/AmazonSNSFullAccess"
      Path: "/"
  LambdaFunction:
    Type: AWS::Lambda::Function
    Properties:
      Role: !GetAtt LambdaRole.Arn
      Runtime: nodejs12.x
      Handler: index.handler
      Code:
        ZipFile: |
          console.log('In Lambda function');
          exports.handler=function(event,context,callback){
            console.log('Message from SNS');
          };
      Description: Function to store token in dynamodb and send email to SNS
      FunctionName: MailingServiceFunction
  LambdaTriggerSNS:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName: !GetAtt LambdaFunction.Arn
      Principal: "sns.amazonaws.com"
      SourceArn: !Ref SNSTopic
  SNSTopic:
    Type: AWS::SNS::Topic
    Properties:
      TopicName: VerifyingEmail
      DisplayName: VerifyingEmail
      Subscription:
        - Protocol: lambda
          Endpoint: !GetAtt LambdaFunction.Arn
  SNSPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: ApplicationSNSPolicy
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Action:
              - sns:Publish
            Resource:
              - !Ref SNSTopic
      Roles:
        - !Ref EC2CSYE6225
  DynamoDBUsernameTable:
    Type: AWS::DynamoDB::Table
    Properties:
      AttributeDefinitions:
        - AttributeName: "EmailID"
          AttributeType: "S"
      KeySchema:
        - AttributeName: "EmailID"
          KeyType: "HASH"
      ProvisionedThroughput:
        ReadCapacityUnits: "5"
        WriteCapacityUnits: "5"
      TableName: "myDynamoUsernameTable"
  DynamoDBTable:
    Type: AWS::DynamoDB::Table
    Properties:
      AttributeDefinitions:
        - AttributeName: "TokenName"
          AttributeType: "S"
      ProvisionedThroughput:
        ReadCapacityUnits: "5"
        WriteCapacityUnits: "5"
      KeySchema:
        - AttributeName: "TokenName"
          KeyType: "HASH"
      TableName: "myDynamoTokenTable"
      TimeToLiveSpecification:
        AttributeName: TimeToLive
        Enabled: true
  DynamoDBPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: DynamoPolicy
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - 'dynamodb:List*'
              - 'dynamodb:DescribeReservedCapacity*'
              - 'dynamodb:DescribeLimits'
              - 'dynamodb:DescribeTimeToLive'
            Resource: 
              - '*'
          - Effect: Allow
            Action:
              - 'dynamodb:PutItem'
              - 'dynamodb:DescribeTable'
              - 'dynamodb:Get*'
              - 'dynamodb:Query'
              - 'dynamodb:Scan'
              - 'dynamodb:Delete*'
              - 'dynamodb:CreateTable'
              - 'dynamodb:Update*'
              - 'dynamodb:BatchWrite*'
              - 'dynamodb:DescribeStream'
              - 'dynamodb:BatchGet*'
            Resource:
              - !GetAtt DynamoDBTable.Arn
      Roles:
        - !Ref EC2CSYE6225
  UserNameDynamoDBPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: UserNameDynamoDBPolicy
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - 'dynamodb:List*'
              - 'dynamodb:DescribeReservedCapacity*'
              - 'dynamodb:DescribeLimits'
              - 'dynamodb:DescribeTimeToLive'
            Resource: 
              - '*'
          - Effect: Allow
            Action:
              - 'dynamodb:PutItem'
              - 'dynamodb:DescribeTable'
              - 'dynamodb:Get*'
              - 'dynamodb:Query'
              - 'dynamodb:Scan'
              - 'dynamodb:Delete*'
              - 'dynamodb:CreateTable'
              - 'dynamodb:Update*'
              - 'dynamodb:BatchWrite*'
              - 'dynamodb:DescribeStream'
              - 'dynamodb:BatchGet*'
            Resource:
              - !GetAtt DynamoDBUsernameTable.Arn
      Roles:
        - !Ref LambdaRole
